<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="app_name">SchedX</string>
    <string name="hello_world">Testing...</string>
    <string name="add_course_title">Add Course</string>
    <string name="add_course_button">Save</string>
    <string name="add_course_hint">Course Code Here</string>
    <string name="add_course_cancel_button_hint">Cancel</string>
    <string name="course_title">Course Title Here</string>
    <string name="course_units">Course Unit (Optional)</string>
    <string name="add_course_custom_title">Add Course </string>
    <string name="todo_name_hint">I wanna...</string>
    <string name="todo_desc_view">Description</string>
    <string name="todo_go_button_label">Schedule</string>
    <string name="done_tasks_title">Done Tasks</string>
    <string name="assessment_venue_hint">Venue</string>
    <string name="create_assessment_button_hint">Create</string>
    <string name="assessment_memo_hint">What this Assessment all about?</string>
    <string name="custom_adapter_arrow_desc">To arrow</string>
    <string name="lecturer_hint">Lecturer</string>
    <string name="monday_header_label">Monday</string>
    <string name="tuesday_header_label">Tuesday</string>
    <string name="wednesday_header_label">Wednesday</string>
    <string name="thursday_header_label">Thursday</string>
    <string name="friday_header_label">Friday</string>
    <string name="saturday_header_label">Saturday</string>
    <string name="sunday_header_label">Sunday</string>
    <string name="courses">Courses</string>
    <string name="add_schedule_action_title">Add Schedule</string>
    <string name="edit_schedule_action_title">Edit Schedule</string>
    <string name="action_delete_item_title">Delete</string>
    <string name="action_item_lecture_save">Save</string>
    <string name="action_item_new_title">Add</string>
    <string name="title_activity_my_custom">MyCustomActivity</string>
    <string name="action_settings">Settings</string>
    <string name="help_action_title">Help</string>
    <string name="generate_report_action_hint">Generate Report</string>
    <string name="title_activity_my_custom_list">MyCustomListActivity</string>
    <string name="title_activity_assessment_list">AssessmentListActivity</string>
    <string name="title_activity_course">Course Manager</string>
    <string name="alert_dialog_title">Delete</string>
    <string name="alert_dialog_yes_option">Yes</string>
    <string name="alert_dialog_no_option">No</string>
    <string name="alert_dilog_message">Are You Sure You want to Delete ?</string>
    
    <string name="class_rep_cancel_button_label">Cancel</string>
    <string name="class_rep_hint">Name here</string>
    <string name="class_rep_reg_no">Registration number</string>
    <string name="class_rep_phone">Phone Number</string>
    <string name="class_rep_email_address">Email Address</string>
    <string name="assign_class_rep">Assign Class Rep</string>
    <string name="title_activity_class_rep">Class Rep</string>
    
    <string name="lecture_status_title">Status</string>
    <string name="lecture_ongoing">On-going</string>
    <string name="lecture_finished">Finished</string>
    <string name="course_code_hint">COURSE</string>
    <string name="start_time_hint">STARTING ON</string>
    <string name="end_time_hint">FINISHING BY</string>
    <string name="lecture_day_hint">DAY</string>
    <string name="venue_hint">VENUE</string>
    <string name="status_hint">STATUS</string>
    <string name="lecture_class_rep_header_hint">CLASS REP</string>
    <string name="app_mode_key">app_mode</string>
    <string name="app_mode_cat_title">App Mode</string>
    <string name="app_mode_title">Mode of Usage</string>
    <string name="app_mode_dialog_titile">Choose App Mode</string>
    <string name="notification_cat_title">Notification</string>
    <string name="notification_check_box">Notify me on upcoming Schedules</string>
    <string name="notification_check_box_title">Receive Notification?</string>
    <string name="notification_key">notification_key</string>
    <string name="lecture_notif_cat_title">Lecture Schedules</string>
    <string name="lecture_notif_dialog_title">Delay(in Minutes)</string>
    <string name="lecture_notification_key">lecture_notification_key</string>
    <string name="lecture_notif_title">Lecture Notifications</string>
    <string name="assessment_cat_title">Assessment Schedules</string>
    <string name="assessment_notif_key">assessment_notification_key</string>
    <string name="assessment_notif_title">Assessment Notifications</string>
    <string name="assessment_notif_dialog_title">Delay(in Days)</string>

    <!-- Delete Course Dialog -->
    <string name="delete_course_message">"All Schedules Associated with this Course will be lost!"</string>
    <string name="delete_course_title">Delete Course</string>
    <string name="delete_course_yes_button">Delete</string>
    <string name="delete_course_no_button">Discard</string>
    <string name="title_activity_lecture_detail">Lecture Details</string>

    <!-- Assessment Detail -->
    <string name="assessment_detail_type_hint">ASSESSMENT TYPE</string>
    <string name="assessment_detail_course_code_hint">COURSE</string>
    <string name="assessment_detail_time_hint">TIME</string>
    <string name="assessment_detail_location_hint">LOCATION</string>
    <string name="assessment_detail_memo_hint">MEMO</string>
    <string name="title_activity_assessment_detail">Assessment Detail</string>

    <!-- TODO Detail -->
    <string name="todo_detail_name_hint">TODO TAG</string>
    <string name="todo_detail_time_hint">TIME</string>
    <string name="todo_detail_memo_hint">MEMO</string>
    <string name="todo_detail_rating_hint">RATING</string>
    <string name="title_activity_todo_detail">Todo Detail</string>
    
    <plurals name="lecture_extra_message" >
        <item quantity="other">(In %d Minutes from now)</item>
        <item quantity="one">now</item>
    </plurals>
    
    <plurals name="assessment_extra_message" >
        <item quantity="other">(In %d Days from now)</item>
        <item quantity="one">now</item>
    </plurals>
    
    <!-- TODO  -->
    <string name="expand_image_button_description">Expand/Collapse Button</string>
    <string name="today_field">TODAY</string>
    <string name="add_button_description">Add Task</string>
    <string name="tomorrow_field">TOMORROW</string>
    <string name="upcoming_field">UPCOMING</string>
   
    <!--Class Rep Context Menu  -->
    <string name="call_class_rep_title"> Call Class Rep</string>
    <string name="email_class_rep_title">Email Class Rep</string>

    <!-- Date And Time Picker Dialogs -->
    <string name="start_time_picker_hint">Starting At</string>
    <string name="end_time_picker_hint">Finshing By</string>
    <string name="time_picker_hint">Time</string>
    <string name="date_picker_hint">Date</string>
</resources>
