<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <LinearLayout 
        android:orientation="vertical" 
        android:layout_margin="@dimen/padding" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:padding="@dimen/detail_header_to_content_pad">
            
            <TextView 
                android:id="@+id/lecture_detail_course_code_hint" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/course_code_hint" 
                style="@style/detail_header_style" />
            
            <TextView 
                android:id="@+id/lecture_detail_course_code" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                />
            
        </LinearLayout>
            
           
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:padding="@dimen/detail_header_to_content_pad">
            
            <TextView 
                android:id="@+id/lecture_detail_day_hint" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/lecture_day_hint" 
                style="@style/detail_header_style" />
            
            <TextView 
                android:id="@+id/lecture_detail_day" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                 />
            </LinearLayout>
            
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:padding="@dimen/detail_header_to_content_pad">
            
            <TextView 
                android:id="@+id/lecture_detail_start_time_hint" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/start_time_hint" 
                style="@style/detail_header_style" />
            
            <TextView 
                android:id="@+id/lecture_detail_start_time" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                 />
            </LinearLayout>
            
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:padding="@dimen/detail_header_to_content_pad">
            
            <TextView 
                android:id="@+id/lecture_detail_end_time_hint" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/end_time_hint" 
                style="@style/detail_header_style" />
            
            <TextView 
                android:id="@+id/lecture_detail_end_time" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                 />
            </LinearLayout>
            
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:padding="@dimen/detail_header_to_content_pad">
            
            <TextView 
                android:id="@+id/lecture_detail_venue_hint" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/venue_hint" 
                style="@style/detail_header_style" />
            
            <TextView 
                android:id="@+id/lecture_detail_venue" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                 />
            </LinearLayout>
            
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:padding="@dimen/detail_header_to_content_pad">
            
            <TextView 
                android:id="@+id/lecture_detail_status_hint" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/status_hint" 
                style="@style/detail_header_style" />
            
             <TextView 
                android:id="@+id/lecture_detail_status" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                 />
    	</LinearLayout>
    	
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:padding="@dimen/detail_header_to_content_pad">
            
            <TextView 
                android:id="@id/lecture_detail_class_rep_hint" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/lecture_class_rep_header_hint" 
                style="@style/detail_header_style" />
            
            <TextView 
                android:id="@+id/lecture_detail_class_rep" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                />
          </LinearLayout>  
    </LinearLayout>
</ScrollView>